# highdicom

./: .codespellrc  .gitignore  .mailmap  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  MANIFEST.in  README.md  code_of_conduct.md  pyproject.toml  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: run_unit_tests.yml
data/test_files/: README.md  dx_image.dcm  seg_image_cr_binary.dcm  seg_image_ct_binary_fractional.dcm  seg_image_ct_binary_overlap.dcm  seg_image_ct_binary_single_frame.dcm  seg_image_ct_true_fractional.dcm  seg_image_grayscale_labeled.dcm  seg_image_sm_control.dcm  seg_image_sm_control_labelmap.dcm  seg_image_sm_control_labelmap_palette_color.dcm  seg_image_sm_dots.dcm  seg_image_sm_dots_tiled_full.dcm  seg_image_sm_numbers.dcm  sm_annotations.dcm  sm_image.dcm  sm_image_control.dcm  sm_image_dots.dcm  sm_image_grayscale.dcm  sm_image_grayscale_reversed.dcm  sm_image_jpegls.dcm  sm_image_jpegls_nobot.dcm  sm_image_numbers.dcm  sr_document.dcm  sr_document_with_multiple_groups.dcm
docs/: Makefile  ann.rst  citation.rst  code_of_conduct.rst  coding.rst  compression.rst  conf.py  conformance.rst  development.rst  general.rst  generalsr.rst  highdicom_and_pydicom.rst  image.rst  index.rst  installation.rst  instance_metadata.rst  introduction.rst  iods.rst  itk_lib.rst  kos.rst  lad_review.md  legacy.rst  license.rst  nib_lib.rst  other_libraries.rst  overview.rst  package.rst  pixel_transforms.rst  pm.rst  pr.rst  quickstart.rst  release_notes.rst  remote.rst  sc.rst  seg.rst  sitk_lib.rst  sr.rst  tid1500.rst  tid1500parsing.rst  uids.rst  (+2 more)
examples/: Dockerfile  README.md
examples/notebooks/: segmentation_slide_microscopy.ipynb
src/highdicom/: __init__.py  _dependency_utils.py  _iods.py  _module_utils.py  _multiframe.py  _pyramid.py  _standard_utils.py  _value_types.py  base.py  base_content.py  coding_schemes.py  color.py  content.py  enum.py  errors.py  frame.py  image.py  io.py  module_utils.py  pixel_transforms.py  pixels.py  py.typed  spatial.py  uid.py  utils.py  valuerep.py  version.py  volume.py
src/highdicom/_standard/: README.md  anatomic_regions.json  iod_module_map.json  sop_class_iod_map.json
src/highdicom/ann/: __init__.py  content.py  enum.py  sop.py
src/highdicom/ko/: __init__.py  content.py  sop.py
src/highdicom/legacy/: __init__.py  sop.py
src/highdicom/map/: __init__.py  content.py  enum.py  sop.py
src/highdicom/pm/: __init__.py  content.py  enum.py  pyramid.py  sop.py
src/highdicom/pr/: __init__.py  content.py  enum.py  sop.py
src/highdicom/sc/: __init__.py  enum.py  sop.py
src/highdicom/seg/: __init__.py  content.py  content_items.py  enum.py  pyramid.py  sop.py  utils.py
src/highdicom/sr/: __init__.py  coding.py  content.py  content_items.py  enum.py  sop.py  templates.py  utils.py  value_types.py
src/highdicom/sr/templates/: __init__.py  common.py  tid1500.py  tid2000.py  tid3700.py  tid3802.py  tid6000.py
src/highdicom/tests/: test_seg.py  test_sr.py
tests/: conftest.py  test_ann.py  test_base.py  test_color.py  test_content.py  test_frame.py  test_image.py  test_io.py  test_itk.py  test_ko.py  test_legacy.py  test_map.py  test_multiframe.py  test_nib.py  test_parametric_map.py  test_pm.py  test_pr.py  test_sc.py  test_seg.py  test_sitk.py  test_spatial.py  test_sr.py  test_sr_ophthalmic.py  test_tid2000.py  test_tid3700.py  test_tid3802.py  test_uid.py  test_utils.py  test_valuerep.py  test_valuetypes.py  test_volume.py  utils.py
